# Wriggle_Game

./: CMakeLists.txt  Makefile  README.md  arcade_game  file-sizes.txt  statistics.txt
include/: ChangeSkin.h  Constants.h  Game.h  Menu.h  Player.h  PowerUp.h  Snake.h  Statistics.h  Wall.h
src/: ChangeSkin.cpp  Game.cpp  Menu.cpp  Player.cpp  PowerUp.cpp  Snake.cpp  Statistics.cpp  Wall.cpp  main.cpp
